<resources>
    <string name="app_name">NotesApp</string>
    <string name="registerTitle">Create Account</string>
    <string name="login_title">Welcome Back</string>
    <string name="login_btn">Log in</string>
    <string name="register_btn">Sign Up</string>
    <string name="regFullN">Full Name</string>
    <string name="regEmail">Email</string>
    <string name="regPass">Password</string>
    <string name="regCPass">Confirm Password</string>
    <string name="linkLogIn">Already have an account? Login</string>
    <string name="loginpg"> Welcome Back</string>
    <string name="loginBtn"> Login</string>
    <string name="linkrgs"> Create account</string>
</resources>